st-core-framework/src/main/generated-sources/it/uniroma2/art/semanticturkey/syntax/manchester/owl2/ManchesterOWL2SyntaxParserParser.java
// Generated from it/uniroma2/art/semanticturkey/syntax/manchester/owl2/ManchesterOWL2SyntaxParser.g4 by ANTLR 4.7
package it.uniroma2.art.semanticturkey.syntax.manchester.owl2;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ManchesterOWL2SyntaxParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, WS=11, NEWLINE=12, COMMENT=13, MULTILINE_COMMENT=14, IRIREF=15, 
		OR=16, AND=17, NOT=18, SOME=19, ONLY=20, MIN=21, MAX=22, EXACTLY=23, VALUE=24, 
		SELF=25, THAT=26, INVERSE=27, INTEGER=28, PNAME_NS=29, PNAME_LN=30, LANGTAG=31, 
		STRING_LITERAL1=32, STRING_LITERAL2=33, AST_BASECLASS=34, AST_OR=35, AST_AND=36, 
		AST_NOT=37, AST_SOME=38, AST_ONLY=39, AST_CARDINALITY=40, AST_VALUE=41, 
		AST_ONEOFLIST=42, AST_PREFIXED_NAME=43;
	public static final int
		RULE_description = 0, RULE_descriptionInner = 1, RULE_conjunction = 2, 
		RULE_notRestriction = 3, RULE_primary = 4, RULE_restriction = 5, RULE_objectPropertyExpression = 6, 
		RULE_atomic = 7, RULE_dataPrimary = 8, RULE_dataAtomic = 9, RULE_literal = 10, 
		RULE_string = 11, RULE_datatype = 12, RULE_datatypeIRI = 13, RULE_literalList = 14, 
		RULE_nonNegativeInteger = 15, RULE_individualList = 16, RULE_individual = 17, 
		RULE_dataPropertyExpression = 18, RULE_objectPropertyIRI = 19, RULE_inverseObjectProperty = 20, 
		RULE_classIRI = 21, RULE_prefixedName = 22;
	public static final String[] ruleNames = {
		"description", "descriptionInner", "conjunction", "notRestriction", "primary", 
		"restriction", "objectPropertyExpression", "atomic", "dataPrimary", "dataAtomic", 
		"literal", "string", "datatype", "datatypeIRI", "literalList", "nonNegativeInteger", 
		"individualList", "individual", "dataPropertyExpression", "objectPropertyIRI", 
		"inverseObjectProperty", "classIRI", "prefixedName"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", "'('", "')'", "'^^'", "'integer'", "'decimal'", "'float'", 
		"'string'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, "WS", 
		"NEWLINE", "COMMENT", "MULTILINE_COMMENT", "IRIREF", "OR", "AND", "NOT", 
		"SOME", "ONLY", "MIN", "MAX", "EXACTLY", "VALUE", "SELF", "THAT", "INVERSE", 
		"INTEGER", "PNAME_NS", "PNAME_LN", "LANGTAG", "STRING_LITERAL1", "STRING_LITERAL2", 
		"AST_BASECLASS", "AST_OR", "AST_AND", "AST_NOT", "AST_SOME", "AST_ONLY", 
		"AST_CARDINALITY", "AST_VALUE", "AST_ONEOFLIST", "AST_PREFIXED_NAME"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ManchesterOWL2SyntaxParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ManchesterOWL2SyntaxParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DescriptionContext extends ParserRuleContext {
		public DescriptionInnerContext descriptionInner() {
			return getRuleContext(DescriptionInnerContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ManchesterOWL2SyntaxParserParser.EOF, 0); }
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).exitDescription(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_description);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			descriptionInner();
			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionInnerContext extends ParserRuleContext {
		public List<ConjunctionContext> conjunction() {
			return getRuleContexts(ConjunctionContext.class);
		}
		public ConjunctionContext conjunction(int i) {
			return getRuleContext(ConjunctionContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(ManchesterOWL2SyntaxParserParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(ManchesterOWL2SyntaxParserParser.OR, i);
		}
		public DescriptionInnerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descriptionInner; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).enterDescriptionInner(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).exitDescriptionInner(this);
		}
	}

	public final DescriptionInnerContext descriptionInner() throws RecognitionException {
		DescriptionInnerContext _localctx = new DescriptionInnerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_descriptionInner);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			conjunction();
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(50);
				match(OR);
				setState(51);
				conjunction();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConjunctionContext extends ParserRuleContext {
		public ClassIRIContext classIRI() {
			return getRuleContext(ClassIRIContext.class,0);
		}
		public TerminalNode THAT() { return getToken(ManchesterOWL2SyntaxParserParser.THAT, 0); }
		public List<NotRestrictionContext> notRestriction() {
			return getRuleContexts(NotRestrictionContext.class);
		}
		public NotRestrictionContext notRestriction(int i) {
			return getRuleContext(NotRestrictionContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(ManchesterOWL2SyntaxParserParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(ManchesterOWL2SyntaxParserParser.AND, i);
		}
		public List<PrimaryContext> primary() {
			return getRuleContexts(PrimaryContext.class);
		}
		public PrimaryContext primary(int i) {
			return getRuleContext(PrimaryContext.class,i);
		}
		public ConjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conjunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).enterConjunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).exitConjunction(this);
		}
	}

	public final ConjunctionContext conjunction() throws RecognitionException {
		ConjunctionContext _localctx = new ConjunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_conjunction);
		int _la;
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				classIRI();
				setState(58);
				match(THAT);
				setState(59);
				notRestriction();
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AND) {
					{
					{
					setState(60);
					match(AND);
					setState(61);
					notRestriction();
					}
					}
					setState(66);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				primary();
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AND) {
					{
					{
					setState(68);
					match(AND);
					setState(69);
					primary();
					}
					}
					setState(74);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotRestrictionContext extends ParserRuleContext {
		public Token not;
		public RestrictionContext restriction() {
			return getRuleContext(RestrictionContext.class,0);
		}
		public TerminalNode NOT() { return getToken(ManchesterOWL2SyntaxParserParser.NOT, 0); }
		public NotRestrictionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notRestriction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).enterNotRestriction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).exitNotRestriction(this);
		}
	}

	public final NotRestrictionContext notRestriction() throws RecognitionException {
		NotRestrictionContext _localctx = new NotRestrictionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_notRestriction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOT) {
				{
				setState(77);
				((NotRestrictionContext)_localctx).not = match(NOT);
				}
			}

			setState(80);
			restriction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryContext extends ParserRuleContext {
		public Token not;
		public RestrictionContext restriction() {
			return getRuleContext(RestrictionContext.class,0);
		}
		public AtomicContext atomic() {
			return getRuleContext(AtomicContext.class,0);
		}
		public TerminalNode NOT() { return getToken(ManchesterOWL2SyntaxParserParser.NOT, 0); }
		public PrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).enterPrimary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).exitPrimary(this);
		}
	}

	public final PrimaryContext primary() throws RecognitionException {
		PrimaryContext _localctx = new PrimaryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_primary);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOT) {
				{
				setState(82);
				((PrimaryContext)_localctx).not = match(NOT);
				}
			}

			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(85);
				restriction();
				}
				break;
			case 2:
				{
				setState(86);
				atomic();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RestrictionContext extends ParserRuleContext {
		public Token type;
		public ObjectPropertyExpressionContext objectPropertyExpression() {
			return getRuleContext(ObjectPropertyExpressionContext.class,0);
		}
		public PrimaryContext primary() {
			return getRuleContext(PrimaryContext.class,0);
		}
		public TerminalNode SOME() { return getToken(ManchesterOWL2SyntaxParserParser.SOME, 0); }
		public TerminalNode ONLY() { return getToken(ManchesterOWL2SyntaxParserParser.ONLY, 0); }
		public IndividualContext individual() {
			return getRuleContext(IndividualContext.class,0);
		}
		public TerminalNode VALUE() { return getToken(ManchesterOWL2SyntaxParserParser.VALUE, 0); }
		public TerminalNode SELF() { return getToken(ManchesterOWL2SyntaxParserParser.SELF, 0); }
		public NonNegativeIntegerContext nonNegativeInteger() {
			return getRuleContext(NonNegativeIntegerContext.class,0);
		}
		public TerminalNode MIN() { return getToken(ManchesterOWL2SyntaxParserParser.MIN, 0); }
		public TerminalNode MAX() { return getToken(ManchesterOWL2SyntaxParserParser.MAX, 0); }
		public TerminalNode EXACTLY() { return getToken(ManchesterOWL2SyntaxParserParser.EXACTLY, 0); }
		public DataPropertyExpressionContext dataPropertyExpression() {
			return getRuleContext(DataPropertyExpressionContext.class,0);
		}
		public DataPrimaryContext dataPrimary() {
			return getRuleContext(DataPrimaryContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public RestrictionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_restriction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).enterRestriction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).exitRestriction(this);
		}
	}

	public final RestrictionContext restriction() throws RecognitionException {
		RestrictionContext _localctx = new RestrictionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_restriction);
		int _la;
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				objectPropertyExpression();
				setState(90);
				((RestrictionContext)_localctx).type = match(SOME);
				setState(91);
				primary();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				objectPropertyExpression();
				setState(94);
				((RestrictionContext)_localctx).type = match(ONLY);
				setState(95);
				primary();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				objectPropertyExpression();
				setState(98);
				((RestrictionContext)_localctx).type = match(VALUE);
				setState(99);
				individual();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				objectPropertyExpression();
				setState(102);
				((RestrictionContext)_localctx).type = match(SELF);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(104);
				objectPropertyExpression();
				setState(105);
				((RestrictionContext)_localctx).type = match(MIN);
				setState(106);
				nonNegativeInteger();
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << IRIREF) | (1L << NOT) | (1L << INVERSE) | (1L << PNAME_LN))) != 0)) {
					{
					setState(107);
					primary();
					}
				}

				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(110);
				objectPropertyExpression();
				setState(111);
				((RestrictionContext)_localctx).type = match(MAX);
				setState(112);
				nonNegativeInteger();
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << IRIREF) | (1L << NOT) | (1L << INVERSE) | (1L << PNAME_LN))) != 0)) {
					{
					setState(113);
					primary();
					}
				}

				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(116);
				objectPropertyExpression();
				setState(117);
				((RestrictionContext)_localctx).type = match(EXACTLY);
				setState(118);
				nonNegativeInteger();
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << IRIREF) | (1L << NOT) | (1L << INVERSE) | (1L << PNAME_LN))) != 0)) {
					{
					setState(119);
					primary();
					}
				}

				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(122);
				dataPropertyExpression();
				setState(123);
				((RestrictionContext)_localctx).type = match(SOME);
				setState(124);
				dataPrimary();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(126);
				dataPropertyExpression();
				setState(127);
				((RestrictionContext)_localctx).type = match(ONLY);
				setState(128);
				dataPrimary();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(130);
				dataPropertyExpression();
				setState(131);
				((RestrictionContext)_localctx).type = match(VALUE);
				setState(132);
				literal();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(134);
				dataPropertyExpression();
				setState(135);
				((RestrictionContext)_localctx).type = match(MIN);
				setState(136);
				nonNegativeInteger();
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << IRIREF) | (1L << NOT) | (1L << PNAME_LN))) != 0)) {
					{
					setState(137);
					dataPrimary();
					}
				}

				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(140);
				dataPropertyExpression();
				setState(141);
				((RestrictionContext)_localctx).type = match(MAX);
				setState(142);
				nonNegativeInteger();
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << IRIREF) | (1L << NOT) | (1L << PNAME_LN))) != 0)) {
					{
					setState(143);
					dataPrimary();
					}
				}

				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(146);
				dataPropertyExpression();
				setState(147);
				((RestrictionContext)_localctx).type = match(EXACTLY);
				setState(148);
				nonNegativeInteger();
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << IRIREF) | (1L << NOT) | (1L << PNAME_LN))) != 0)) {
					{
					setState(149);
					dataPrimary();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectPropertyExpressionContext extends ParserRuleContext {
		public ObjectPropertyIRIContext objectPropertyIRI() {
			return getRuleContext(ObjectPropertyIRIContext.class,0);
		}
		public InverseObjectPropertyContext inverseObjectProperty() {
			return getRuleContext(InverseObjectPropertyContext.class,0);
		}
		public ObjectPropertyExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectPropertyExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).enterObjectPropertyExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).exitObjectPropertyExpression(this);
		}
	}

	public final ObjectPropertyExpressionContext objectPropertyExpression() throws RecognitionException {
		ObjectPropertyExpressionContext _localctx = new ObjectPropertyExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_objectPropertyExpression);
		try {
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IRIREF:
			case PNAME_LN:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				objectPropertyIRI();
				}
				break;
			case INVERSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				inverseObjectProperty();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomicContext extends ParserRuleContext {
		public ClassIRIContext classIRI() {
			return getRuleContext(ClassIRIContext.class,0);
		}
		public IndividualListContext individualList() {
			return getRuleContext(IndividualListContext.class,0);
		}
		public DescriptionInnerContext descriptionInner() {
			return getRuleContext(DescriptionInnerContext.class,0);
		}
		public AtomicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).enterAtomic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ManchesterOWL2SyntaxParserListener ) ((ManchesterOWL2SyntaxParserListener)listener).exitAtomic(this);
		}
	}
